terraform/LB.tf
# LB settings

resource "aws_lb" "app_balancer" {
  name = "Vpro-app-lb"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.vpro_lb_sg.id]
  subnets = [aws_subnet.public_1a.id, aws_subnet.public_1b.id, aws_subnet.public_1c.id]
}

# TG-LB

resource "aws_lb_target_group" "app_tg" {
  name = "Vpro-target-group"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.main.id

  health_check {
    path = "/"
    healthy_threshold = 2
    unhealthy_threshold = 10
  }
}

# Listener-LB

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.app_balancer.arn
  port = "80"
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
